# ThreatGraph

./: .gitignore  Dockerfile  README.md  app.py  demo.md  deployment.md  docker-compose.yml  explainer.md  faq.md  idiot.md  ingest.py  overview.md  pitch.md  tech.md  walkthrough.md
design/: fixes.md
docs/: competitor_research_and_gap_analysis.md.metadata.json  implementation_plan.md.metadata.json  index.html  pitch.md.metadata.json  project_description.md.metadata.json  technical_architecture.md.metadata.json  technical_architecture.md.resolved.0
src/: config.py  database.py
src/agents/: workflow.py
src/ingestion/: asset_seeder.py  attack_loader.py  code_scanner.py  cve_correlator.py  software_linker.py
src/tools/: graph_viz.py  nvd_tool.py  surreal_tools.py
tests/: test_core_graph_flow.py  test_threatgraph.py
threatgraph/: .env.example  .gitignore  app.py  requirements.txt
threatgraph/docs/: competitor_research_and_gap_analysis.md.resolved.0  implementation_plan.md.resolved.0  pitch.md.resolved.0  project_description.md.resolved.0  specifications.md.metadata.json  specifications.md.resolved.0
threatgraph/src/agents/: workflow.py
threatgraph/src/ingestion/: attack_loader.py
threatgraph/src/tools/: graph_viz.py  surreal_tools.py  tracing.py
threatgraph/toolkit/langchain_surrealdb_mitre/: __init__.py  checkpointer.py  loader.py
toolkit/: README.md  pyproject.toml
toolkit/langchain_surrealdb_mitre/: checkpointer.py  retriever.py  tools.py
